Bug 641599. Completely flush all ThebesLayers whenever the appunits-per-dev-pixel ratio changes. r=tnikkel